--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^2.20",
+        "lexik/jwt-authentication-bundle": "^2.18",
         "symfony/console": "5.4.*",
         "symfony/doctrine-bridge": "5.4.*",
         "symfony/dotenv": "5.4.*",
